add ttl customization
